--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,33 @@
 <!-- _includes/footer.html -->
 
-<footer class="site-footer">
-    <div class="footer-social-links">
-        <ul>
-        {% if site.social.github %}
-          <li><a href="{{ site.social.github }}" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li>
-        {% endif %}
-        {% if site.social.linkedin %}
-          <li><a href="{{ site.social.linkedin }}" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
-        {% endif %}
-        </ul>
+<footer class="site-footer h-card">
+    <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+    <div class="wrapper">
+
+        
+        <div class="footer-col-wrapper">
+            <div class="footer-col">
+            {%- if site.author %}
+                <ul class="contact-list">
+                {% if site.author.name -%}
+                    <li class="p-name">{{ site.author.name | escape }}</li>
+                {% endif -%}
+                {% if site.author.email -%}
+                    <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+                {%- endif %}
+                </ul>
+            {%- endif %}
+            </div>
+            <div class="footer-col">
+                <p>{{ site.description | escape }}</p>
+            </div>
+        </div>
+
+        <div class="social-links">
+            {%- include social.html -%}
+        </div>
+
     </div>
+
 </footer>
